--- a/css/main.css
+++ b/css/main.css
@@ -21,19 +21,20 @@ html {
   src: url('../fonts/FZZZHUNHJW.ttf');
 }
 .st {
-  background-color: #06214e;
+  background-color: white;
 }
 .st .bg {
   width: 100%;
   height: 100%;
-  background-image: url(../images/bg1.jpg);
+  background-image: url(../images/backgrond.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
 }
 .st .qcdb {
-  width: 65%;
+  width: 85%;
   padding-top: 1.1rem;
+  padding-bottom: 0.5rem;
   margin: 0 auto;
 }
 .st .qcdb img {
@@ -138,7 +139,7 @@ html {
   width: 100%;
   height: auto;
 }
-.st .huan {
+/* .st .huan {
   width: 100%;
   height: 3.9rem;
   position: absolute;
@@ -146,14 +147,44 @@ html {
   animation: run 10s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
-  transform-origin: 50% 3.9rem;
-}
-.st .huan img {
+  transform-origin: 50% 3.9rem; */
+/* } */
+/* .st .huan img {
   width: 120%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+} */
+#wave1{
+  position: absolute;;
+  bottom: 0;
+  animation: waving1 6s ease-in-out infinite;
+  animation-direction: alternate;
 }
+#wave2{
+  position: absolute;;
+  bottom: 0;
+  animation: waving2 5s ease-in-out infinite;
+  animation-direction: alternate;
+}
+
+@keyframes waving1{
+  from{
+    bottom: -300px;
+  }
+  to{
+    bottom: -500px;
+  }
+}
+@keyframes waving2{
+  from{
+    bottom: -400px;
+  }
+  to{
+    bottom: -450px;
+  }
+}
+
 .answer .bg {
   width: 100%;
   height: 100%;
@@ -259,7 +290,7 @@ html {
   width: 100%;
   height: 100%;
   padding-top: 2rem;
-  background-image: url(../images/qbg.jpg);
+  background-image: url(../images/backgrond.png);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
@@ -267,7 +298,7 @@ html {
 }
 .result .reBox {
   width: 80%;
-  height: 70%;
+  height: 90%;
   background-color: rgba(255, 255, 255, 0.4);
   margin: 0 auto;
   border-radius: 0.4rem;
@@ -527,11 +558,22 @@ html {
   top: 0;
   left: 0;
 }
-@keyframes run {
+/* @keyframes run {
   from {
     transform: rotateZ(0);
   }
   to {
     transform: rotateZ(360deg);
+  }
+} */
+#banner-text{
+  position: absolute;
+  top:0px;
+  animation: banner-text 3s ease-in-out infinite;
+  animation-direction: alternate;
+}
+@keyframes banner-text {
+  from{
+    transform: translateX(-400px);
   }
 }
