--- a/css/main.css
+++ b/css/main.css
@@ -376,7 +376,7 @@ html {
   height: 0.7rem;
 }
 .result .btnBox .again {
-  background-image: url(../images/再测一次.png);
+  background-image: url(../images/button-restart.png);
 }
 .result .btnBox .save {
   background-image: url(../images/692413359442446941.jpg);
