--- a/css/main.css
+++ b/css/main.css
@@ -121,10 +121,10 @@ html {
   font-size: 0.24rem;
   height: 0.6rem;
   line-height: 0.6rem;
-  background-color: rgba(112, 19, 19, 0.315);
+  background-color: transparent;
   color: #772e28;
   font-weight: bold;
-  margin-left: -1rem;
+  margin-left: -2rem;
 }
 .st .djks {
   width: 2.5rem;
