--- a/css/base.css
+++ b/css/base.css
@@ -14,21 +14,13 @@ a:active{
 sup { vertical-align:text-top; } 
 sub{ vertical-align:text-bottom; } 
 legend { color:#000; } 
-fieldset, img { border:0; } 
+/* fieldset, img { border:0; }  */
 button, input, select, textarea { font-size:100%; } 
 table { border-collapse:collapse; border-spacing:0; }
-input[type=color], input[type=date], input[type=datetime-local], input[type=datetime], input[type=email], input[type=month], input[type=number], input[type=password], input[type=search], input[type=tel], input[type=text], input[type=time], input[type=url], input[type=week], select, textarea{
-	line-height: normal;
-    width: auto;
-    height: auto;
-    margin-bottom: 0;
-    padding: 0;
-    -webkit-user-select: text;
+input, select, textarea{
+	
     border: none;
-    border-radius: 0;
-    outline: 0;
-    background-color: #fff;
-    -webkit-appearance: none;
+    
 }
 /*自定义*/
 .fl {
@@ -45,6 +37,7 @@ input[type=color], input[type=date], input[type=datetime-local], input[type=date
     display: block;
     clear: both;
 } 
+
 @media only screen and (min-width:320px) {
     html {
         font-size: 50px
