--- a/answer/css/main.css
+++ b/answer/css/main.css
@@ -570,3 +570,15 @@ html {
 	75%  {transform: translateY(-5px)}
 	100% {transform: translateY(0)}
 }
+
+/* overlay */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1000;
+  display: none;
+}
