--- a/css/base.css
+++ b/css/base.css
@@ -22,22 +22,8 @@ input, select, textarea{
     border: none;
     
 }
-/*自定义*/
-.fl {
-	float: left;
-}
-.fr {
-	float: right;
-}
-.clear {
-	clear: both;
-}
-.clearfix:after{ 
-    content: "";
-    display: block;
-    clear: both;
-} 
 
+/* 媒体查询 */
 @media only screen and (min-width:320px) {
     html {
         font-size: 50px
